2011-03-08  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, GTK build fix after r80536

        * GNUmakefile.am:

2011-03-08  Zan Dobersek  <zandobersek@gmail.com>

        Reviewed by Martin Robinson.

        [Gtk] toDataURL uses incorrect quality value when saving GdkPixbuf to buffer
        https://bugs.webkit.org/show_bug.cgi?id=55878

        Multiply the quality parameter by 100 to put it in the range [0, 100] as needed
        when saving GdkPixbuf to a buffer.

        * platform/graphics/gtk/ImageBufferGtk.cpp:
        (WebCore::ImageBuffer::toDataURL):

2011-03-07  Daniel Cheng  <dcheng@chromium.org>

        Unreviewed.

        Final build fix for r80536.

        * DerivedSources.make:

2011-03-07  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        Reviewed by Kent Tamura.

        [EFL] Adjust functions of WebCore's efl port to WebKit coding style
        https://bugs.webkit.org/show_bug.cgi?id=55924

        Adjust webkit style to PlatformKeyboardEventEfl, PlatformMouseEventEfl and WidgetEfl files.

        * platform/efl/PlatformKeyboardEventEfl.cpp:
        (WebCore::PlatformKeyboardEvent::PlatformKeyboardEvent):
        * platform/efl/PlatformMouseEventEfl.cpp:
        (WebCore::PlatformMouseEvent::PlatformMouseEvent):
        * platform/efl/WidgetEfl.cpp:
        (WebCore::Widget::frameRectsChanged):
        (WebCore::Widget::setEvasObject):

2011-03-07  Daniel Cheng  <dcheng@chromium.org>

        Unreviewed.

        More build fixes for r80536.

        * CMakeLists.txt:
        * platform/chromium/ClipboardChromium.cpp:
        * platform/chromium/ClipboardChromium.h:

2011-03-07  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        Reviewed by Antonio Gomes.

        [EFL] Adjust functions of ScrollbarEfl.cpp to WebKit coding style
        https://bugs.webkit.org/show_bug.cgi?id=55917

        Adjust webkit style to ScrollbarEfl files.

        * platform/efl/ScrollbarEfl.cpp:
        (scrollbarEflEdjeMessage):